methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:16: error: Unmatched closing brace '}' ignored here
}
^